[package]
name = "elliotsr-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
serde = "1.0.1"
serde_json = "1.0.1"
api = { git = "https://github.com/INDA23PlusPlus/simonju-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }